调整ip获取方式

--- a/shell-web/views/index.ejs
+++ b/shell-web/views/index.ejs
@@ -32,7 +32,7 @@
                             this.ip = res.en0[1].address;
                         }
                         if (res.wlan0) {
-                            this.ip = res.en0[1].address;
+                            this.ip = res.wlan0[1].address;
                         }
                     });
                 }
