--- a/shell-web/views/index.ejs
+++ b/shell-web/views/index.ejs
@@ -14,8 +14,16 @@
         <div id="app"></div>
         <template class="template">
             <main>
-                <button @click="getIp">getIp</button>
-                <p>服务器局域网IP: {{ ip }}</p>
+                <article>
+                    <button @click="getIp">getIp</button>
+                    <p>
+                        服务器局域网IP信息: <br>
+                        ip: {{ip.v4_address}} <br>
+                        source: {{ip.source}}
+                    </p>
+
+                </article>
+
             </main>
         </template>
     </body>
@@ -28,11 +36,10 @@
             methods: {
                 getIp() {
                     $http('/get_ip').then((res) => {
-                        if (res.en0) {
-                            this.ip = res.en0[1].address;
-                        }
-                        if (res.wlan0) {
-                            this.ip = res.wlan0[0].address;
+                        let data = res.en0 || res.wlan0;
+                        this.ip = {
+                            source: data,
+                            v4_address: data.filter(item => item.family == 'IPv4')[0].address
                         }
                     });
                 }
@@ -40,7 +47,10 @@
             mounted() {},
             data() {
                 return {
-                    ip: ''
+                    ip: {
+                        source: null,
+                        v4_address: ''
+                    }
                 };
             }
         });
